--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -234,8 +234,77 @@
                     </ul>
                 </div>
             </div>
-            <div class="random">
-                random<i class="fa fa-address-book"></i>
+            <div class="random" style="border: 1px solid #ccc; height: 140px;margin-top: 10px;padding: 12px;">
+                <!-- random<i class="fa fa-address-book"></i> -->
+                <div style="text-align: center;font-weight: bold;font-size: 18px;">
+                  <i class="fa fa-address-book"></i> 
+                  联系我
+                </div>
+                <div>
+                  <span style="font-weight: bold;font-size: 15px;">QQ：</span>984511321
+                </div>
+                <div>
+                 <span style="font-weight: bold;font-size: 15px;">邮箱：</span>984511321@qq.com
+                </div>
+                <div>
+                 <span style="font-weight: bold;font-size: 15px;">github：</span>https://github.com/miracle857
+                </div>
+            </div>
+            <div class="about" style="border: 1px solid #ccc; margin-top: 10px;padding: 12px; display: inline-block;">
+                <div style="text-align: center;font-weight: bold;font-size: 18px;">
+                  <i class="fa fa-codepen"></i> 
+                  项目简介
+                </div>
+                <div>
+                  服务端采用Spring+SpringMVC+Mybatis等框架
+                  将实现的功能
+                  <ul>
+                    <li>1.个人用户方面
+                      <ul>
+                        <li>
+                          1)注册登录找回密码
+                        </li>
+                        <li>
+                          2)修改个人信息，密码等
+                        </li>
+                      </ul>
+                    </li>
+                    <li>2.微博
+                      <ul>
+                        <li>
+                          1)发微博
+                        </li>
+                        <li>
+                          2)评论微博
+                        </li>
+                        <li>
+                          3)删除微博（未完成）
+                        </li>
+                      </ul>
+                    </li>
+                    <li>3.好友
+                      <ul>
+                        <li>
+                          1)关注
+                        </li>
+                        <li>
+                          2)移除粉丝
+                        </li>
+                      </ul>
+                    </li>
+                    <li>4.其他
+                      <ul>
+                        <li>
+                          1)实时微博消息推送（未完成）
+                        </li>
+                        <li>
+                          2)实时聊天系统（未完成）
+                        </li>
+                      </ul>
+                    </li>
+                    <li></li>
+                  </ul>
+                </div>
             </div>
         </div>
 	</div>
