头像上传 准备

--- a/weibo/src/main/webapp/WEB-INF/view/detail.html
+++ b/weibo/src/main/webapp/WEB-INF/view/detail.html
@@ -3,19 +3,19 @@
 <head>
   <meta charset="UTF-8">
     <!--  fontawesome -->
-    <link href="./font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" /> 
+    <link href="${ctx}/font-awesome-4.7.0/css/font-awesome.min.css" rel="stylesheet" /> 
 
   <!-- jquery -->
-  <script src="./3rd/jquery/jquery3.2.1.js"></script>
+  <script src="${ctx}/3rd/jquery/jquery3.2.1.js"></script>
 
   <!-- bootstrap -->
-  <link rel="stylesheet" href="./3rd/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" >
-  <link rel="stylesheet" href="./3rd/bootstrap-3.3.7-dist/css/bootstrap.min.css" >
+  <link rel="stylesheet" href="${ctx}/3rd/bootstrap-3.3.7-dist/css/bootstrap-theme.min.css" >
+  <link rel="stylesheet" href="${ctx}/3rd/bootstrap-3.3.7-dist/css/bootstrap.min.css" >
 
   <link rel="stylesheet" href="./3rd/layui/css/layui.css" >
-  <script src="./3rd/bootstrap-3.3.7-dist/js/bootstrap.min.js" ></script>
-  <script src="./3rd/layui/layui.all.js" ></script>
-  <link href="./css/index.css" rel="stylesheet" /> 
+  <script src="${ctx}/3rd/bootstrap-3.3.7-dist/js/bootstrap.min.js" ></script>
+  <script src="${ctx}/3rd/layui/layui.all.js" ></script>
+  <link href="${ctx}/css/index.css" rel="stylesheet" /> 
 
   <title>weibo</title>
   
@@ -90,6 +90,23 @@
       color: #FA7D3C;
       font-style: normal;
     }
+    .each-follow-i{
+      color: black;transform:rotate(90deg);
+      -ms-transform:rotate(90deg);   /* IE 9 */
+      -moz-transform:rotate(90deg);  /* Firefox */
+      -webkit-transform:rotate(90deg); /* Safari 和 Chrome */
+      -o-transform:rotate(90deg);  /* Opera */
+    }
+    .follow-span{
+      border: 1px solid #ccc;
+      top: 20px;
+      position: absolute;
+      right: 20px;
+      box-shadow: 1px 1px 1px #ccc;
+      border-radius: 10%;
+      padding: 3px;
+    }
+
   </style>
   <div class="body" style="height: 1000px;">
     <div class="container" style="margin-top: 40px; width: 1000px;">
@@ -166,8 +183,10 @@
         <!-- 好友，关注，微博等DIV块 -->
         <div>
             <div id="fans_div" class="fans_div" style="border: 1px solid #ccc;">
-              <my-fans-template v-for="user in users" v-bind:obj="user"> 
-              </my-fans-template>  
+              <!-- <my-fans-template v-for="user in users" v-bind:obj="user"> 
+              </my-fans-template>   -->
+              <my-follow-template v-for="user in users" v-bind:obj="user"> 
+              </my-follow-template>
             </div>
 
         </div>
@@ -265,18 +284,13 @@
                     </div>
                   </div>
                   <div class="col-md-4">
-                    <span v-if="obj.isComplete" style="border: 1px solid #ccc; top: 20px; position: absolute;right: 20px;box-shadow: 1px 1px 1px #ccc; border-radius: 10%;padding: 3px;">
-                      <i class="glyphicon glyphicon-sort" style="color: black;transform:rotate(90deg);
-                        -ms-transform:rotate(90deg);   /* IE 9 */
-                        -moz-transform:rotate(90deg);  /* Firefox */
-                        -webkit-transform:rotate(90deg); /* Safari 和 Chrome */
-                        -o-transform:rotate(90deg);  /* Opera */">
+                    <span v-if="obj.isComplete" class="follow-span">
+                      <i class="glyphicon glyphicon-sort each-follow-i">
                       </i>
                       <a href="" @click.prevent="unFollow">互相关注</a>
                     </span>
-                    <span v-else style="border: 1px solid #ccc; top: 20px; position: absolute;right: 20px;box-shadow: 1px 1px 1px #ccc; border-radius: 10%;padding: 3px;">
+                    <span v-else class="follow-span">
                       <i class="glyphicon glyphicon-plus" style="color: #FA7D3C"></i>
-
                       <a href="" @click.prevent='follow'>关注</a>
                     </span>
                   </div>
@@ -295,6 +309,56 @@
         }
       }
 
+  }); // Vue.component
+
+
+  Vue.component('my-follow-template', {
+    props: ['obj'],
+    template: `<div id="3">
+                  <div class="col-md-2">
+                    <p style="text-align: center; margin-top: 20px;">
+                      <img src="img/logo.jpg" class="img-circle" style="height: 40px;width: 40px;" alt="">
+                    </p>
+                  </div>
+                  <div class="col-md-6" style="">
+                    <div>
+                      <h1 style="font-size: 20px;">miracle2</h1>
+                    </div>
+                    <div>
+                      <span style="font-size: 12px;">关注
+                          <em class="font_normal">{{obj.text}}</em>
+                      </span>
+                      <span style="font-size: 12px;">粉丝
+                          <em class="font_normal">3</em>
+                      </span>
+                      <span style="font-size: 12px;">微博
+                          <em class="font_normal">4</em>
+                      </span>
+                    </div>
+                    <div style="font-size: 12px;margin-top: 5px;">
+                      <span style="color: #808080">
+                        签名: 
+                      </span>
+                      dasd 
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <span v-if="obj.isComplete" class="follow-span">
+                      <i class="glyphicon glyphicon-sort each-follow-i">
+                      </i>
+                      <a href="" @click.prevent="unFollow">互相关注</a>
+                    </span>
+                    <span v-else class="follow-span">
+                      <i class="glyphicon glyphicon-ok" style="color: #FA7D3C"></i>
+                      <a href="" @click.prevent='follow'>已关注</a>
+                    </span>
+                  </div>
+                
+                  <div style="text-align: center;padding-left: 30px;padding-right: 30px;" class="col-md-12">
+                    <div style="border-top:1px  dashed #ccc; ">
+                    </div>
+                  </div>
+                </div>`,
   }); // Vue.component
 
   var vm1 = new Vue({
