--- a/weibo/src/main/webapp/WEB-INF/view/index.html
+++ b/weibo/src/main/webapp/WEB-INF/view/index.html
@@ -37,7 +37,7 @@
 			<ul>
 				<li><i class="glyphicon glyphicon-home"></i>首页</li>
 				<li><i class="glyphicon glyphicon-envelope">消息</i></li>
-				<li><i class="glyphicon glyphicon-cog"></i>设置 </li>
+				<li><i class="glyphicon glyphicon-cog"></i><a href="/set/photo.do">设置</a> </li>
 				<li><i class="glyphicon glyphicon-cog"></i>发现 </li>
 				<li><i class="glyphicon glyphicon-edit"></i>发微博</li>
 			</ul>
